--- a/tenghen/src/main/res/layout/activity_book_type.xml
+++ b/tenghen/src/main/res/layout/activity_book_type.xml
@@ -27,7 +27,7 @@
                     android:id="@+id/allTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -39,7 +39,7 @@
                     android:id="@+id/fantasyMagicTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -52,7 +52,7 @@
                     android:id="@+id/youthSchoolTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -65,7 +65,7 @@
                     android:id="@+id/modernRomanceTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -78,7 +78,7 @@
                     android:id="@+id/ancientRomanceTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -91,7 +91,7 @@
                     android:id="@+id/fantasyRomanceTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -104,7 +104,7 @@
                     android:id="@+id/girlSuspenseTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -117,7 +117,7 @@
                     android:id="@+id/sciFiTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -130,7 +130,7 @@
                     android:id="@+id/humanDecimalTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -143,7 +143,7 @@
                     android:id="@+id/lightNovelTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -156,7 +156,7 @@
                     android:id="@+id/modernCityTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -169,7 +169,7 @@
                     android:id="@+id/suspenseThrillersTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -182,7 +182,7 @@
                     android:id="@+id/gameTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -195,7 +195,7 @@
                     android:id="@+id/historyMilitaryTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -208,7 +208,7 @@
                     android:id="@+id/knightErrantTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -221,7 +221,7 @@
                     android:id="@+id/fantasyExploreTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -234,7 +234,7 @@
                     android:id="@+id/supernaturalSuspenseTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -247,7 +247,7 @@
                     android:id="@+id/emotionalNovelTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -260,7 +260,7 @@
                     android:id="@+id/literatureNovelTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -273,7 +273,7 @@
                     android:id="@+id/filmScriptTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -286,7 +286,7 @@
                     android:id="@+id/lifeLeisureTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -299,7 +299,7 @@
                     android:id="@+id/historyBiographyTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -312,7 +312,7 @@
                     android:id="@+id/manageImproveTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -325,7 +325,7 @@
                     android:id="@+id/socialScienceTypeBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40px"
+                    android:textSize="14sp"
                     android:paddingLeft="18px"
                     android:paddingRight="18px"
                     android:paddingTop="14px"
@@ -354,7 +354,7 @@
                 android:id="@+id/allCostBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
@@ -366,7 +366,7 @@
                 android:id="@+id/freeBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
@@ -379,7 +379,7 @@
                 android:id="@+id/chargeBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
@@ -392,7 +392,7 @@
                 android:id="@+id/monthBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
@@ -418,7 +418,7 @@
                 android:id="@+id/allCompleteBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
@@ -430,7 +430,7 @@
                 android:id="@+id/completeBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
@@ -443,7 +443,7 @@
                 android:id="@+id/serialBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
@@ -469,7 +469,7 @@
                 android:id="@+id/orderNewBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
@@ -481,7 +481,7 @@
                 android:id="@+id/orderCollectBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
@@ -495,7 +495,7 @@
                 android:id="@+id/orderLengthBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40px"
+                android:textSize="14sp"
                 android:paddingLeft="18px"
                 android:paddingRight="18px"
                 android:paddingTop="14px"
