--- a/tenghen/src/main/res/layout/activity_bind_phone.xml
+++ b/tenghen/src/main/res/layout/activity_bind_phone.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="手机号"/>
         <EditText
             android:id="@+id/phoneEt"
@@ -29,7 +29,7 @@
             android:layout_marginLeft="98px"
             android:background="@null"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:singleLine="true"
             android:inputType="phone"
             android:hint="请输入手机号"/>
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="验证码"/>
         <EditText
             android:id="@+id/verifyCodeEt"
@@ -59,7 +59,7 @@
             android:layout_marginLeft="51px"
             android:background="@null"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:singleLine="true"
             android:inputType="number"
             android:maxLength="6"
@@ -69,7 +69,7 @@
             android:id="@+id/getVerifyBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:textColor="#1585b1"
             android:text="获取"/>
     </LinearLayout>
@@ -81,7 +81,7 @@
         android:layout_marginLeft="96px"
         android:layout_marginRight="96px"
         android:layout_marginTop="53px"
-        android:textSize="48px"
+        android:textSize="16sp"
         android:background="@color/color_toolbar"
         android:textColor="@color/white"
         android:text="确定"/>
