--- a/tenghen/src/main/res/layout/activity_login.xml
+++ b/tenghen/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:textColor="@drawable/selector_text_color_register"
             android:background="@drawable/selector_btn_register_type"
-            android:textSize="33px"
+            android:textSize="11sp"
             android:text="手机号登录"
             />
         <View
@@ -41,7 +41,7 @@
             android:gravity="center"
             android:textColor="@drawable/selector_text_color_register"
             android:background="@drawable/selector_btn_register_type"
-            android:textSize="33px"
+            android:textSize="11sp"
             android:text="邮箱登录"
             />
     </LinearLayout>
@@ -54,7 +54,7 @@
         android:layout_marginTop="54px"
         android:background="@drawable/shape_white_black_stroke_rect"
         android:textColor="@color/black"
-        android:textSize="36px"
+        android:textSize="12sp"
         android:paddingLeft="48px"
         android:paddingRight="48px"
         android:singleLine="true"
@@ -69,7 +69,7 @@
         android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ_"
         android:background="@drawable/shape_white_black_stroke_rect"
         android:textColor="@color/black"
-        android:textSize="36px"
+        android:textSize="12sp"
         android:paddingLeft="48px"
         android:paddingRight="48px"
         android:singleLine="true"
@@ -90,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="验证码"/>
         <EditText
             android:id="@+id/verifyCodeEt"
@@ -100,7 +100,7 @@
             android:layout_marginLeft="51px"
             android:background="@null"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:singleLine="true"
             android:inputType="number"
             android:maxLength="6"
@@ -110,7 +110,7 @@
             android:id="@+id/getVerifyBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:textColor="#1585b1"
             android:text="获取"/>
     </LinearLayout>
@@ -133,7 +133,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_marginLeft="27px"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="记住密码"/>
 
         <ImageView
@@ -147,7 +147,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_marginLeft="27px"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="忘记密码"/>
     </LinearLayout>
 
@@ -163,7 +163,7 @@
             android:layout_height="81px"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="47px"
+            android:textSize="16sp"
             android:background="#f96565"
             android:text="登录"
             />
@@ -173,7 +173,7 @@
             android:layout_height="81px"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="47px"
+            android:textSize="16sp"
             android:background="#3fbfcc"
             android:layout_marginLeft="78px"
             android:text="注册"
@@ -194,7 +194,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="33px"
+            android:textSize="11sp"
             android:textColor="#bababa"
             android:text="其他登录方式"
             android:layout_marginLeft="33px"
