--- a/tenghen/src/main/res/layout/activity_modify_pwd.xml
+++ b/tenghen/src/main/res/layout/activity_modify_pwd.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="手机号"/>
         <EditText
             android:id="@+id/phoneEt"
@@ -29,7 +29,7 @@
             android:layout_marginLeft="98px"
             android:background="@null"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:singleLine="true"
             android:inputType="phone"
             android:hint="请输入手机号"/>
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="旧密码"/>
         <EditText
             android:id="@+id/oldPwdEt"
@@ -59,7 +59,7 @@
             android:background="@null"
             android:textColor="@color/black"
             android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ_"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:singleLine="true"
             android:inputType="textPassword"
             android:hint="请输入旧密码"/>
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="新密码"/>
         <EditText
             android:id="@+id/newPwdEt"
@@ -88,7 +88,7 @@
             android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ_"
             android:background="@null"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:singleLine="true"
             android:inputType="textPassword"
             android:hint="请输入新密码"/>
@@ -107,7 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textSize="36px"
+        android:textSize="12sp"
         android:text="确认密码"/>
     <EditText
         android:id="@+id/confirmPwdEt"
@@ -116,7 +116,7 @@
         android:layout_marginLeft="51px"
         android:background="@null"
         android:textColor="@color/black"
-        android:textSize="36px"
+        android:textSize="12sp"
         android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ_"
         android:singleLine="true"
         android:inputType="textPassword"
@@ -136,7 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="验证码"/>
         <EditText
             android:id="@+id/verifyCodeEt"
@@ -146,7 +146,7 @@
             android:layout_marginLeft="51px"
             android:background="@null"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:singleLine="true"
             android:inputType="number"
             android:maxLength="6"
@@ -156,7 +156,7 @@
             android:id="@+id/getVerifyBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:textColor="#1585b1"
             android:text="获取"/>
     </LinearLayout>
@@ -168,7 +168,7 @@
         android:layout_marginLeft="96px"
         android:layout_marginRight="96px"
         android:layout_marginTop="53px"
-        android:textSize="48px"
+        android:textSize="16sp"
         android:background="@color/color_toolbar"
         android:textColor="@color/white"
         android:text="确定"/>
