--- a/tenghen/src/main/res/layout/activity_recharge_type.xml
+++ b/tenghen/src/main/res/layout/activity_recharge_type.xml
@@ -20,14 +20,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#373737"
-            android:textSize="42px"
+            android:textSize="14sp"
             android:text="余额 : 100腾币"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="37px"
             android:textColor="#8c8c8c"
-            android:textSize="23px"
+            android:textSize="8sp"
             android:text="1元=100腾币"/>
     </LinearLayout>
     <View
@@ -54,7 +54,7 @@
             android:text="支付宝支付"
             android:textColor="#373737"
             android:layout_marginLeft="30px"
-            android:textSize="42px"/>
+            android:textSize="14sp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="1px"
@@ -88,7 +88,7 @@
             android:text="微信支付"
             android:textColor="#373737"
             android:layout_marginLeft="30px"
-            android:textSize="42px"/>
+            android:textSize="14sp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="1px"
@@ -122,7 +122,7 @@
             android:text="银联支付"
             android:textColor="#373737"
             android:layout_marginLeft="30px"
-            android:textSize="42px"/>
+            android:textSize="14sp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="1px"
@@ -139,7 +139,7 @@
         android:paddingRight="72px"
         android:layout_marginTop="90px"
         android:textColor="#c3c3c5"
-        android:textSize="25px"
+        android:textSize="9sp"
         android:text="温馨提示：\n1.苹果政策规定，在IOS上的腾币，在非IOS终端不能使用。\n2.在不定期活动中可获取腾币。\n3.所有解释权归腾痕书院所有。"/>
 
 </LinearLayout>
