--- a/tenghen/src/main/res/layout/activity_register.xml
+++ b/tenghen/src/main/res/layout/activity_register.xml
@@ -27,7 +27,7 @@
                     android:gravity="center"
                     android:textColor="@drawable/selector_text_color_register"
                     android:background="@drawable/selector_btn_register_type"
-                    android:textSize="33px"
+                    android:textSize="11sp"
                     android:text="手机号注册"
                     />
                 <View
@@ -41,7 +41,7 @@
                     android:gravity="center"
                     android:textColor="@drawable/selector_text_color_register"
                     android:background="@drawable/selector_btn_register_type"
-                    android:textSize="33px"
+                    android:textSize="11sp"
                     android:text="邮箱注册"
                     />
             </LinearLayout>
@@ -54,7 +54,7 @@
                 android:paddingRight="50px"
                 android:background="@drawable/shape_white_black_stroke_rect"
                 android:gravity="center_vertical"
-                android:textSize="33px"
+                android:textSize="11sp"
                 android:textColor="@color/black"
                 android:inputType="textEmailAddress"
                 android:hint="请输入邮箱"/>
@@ -75,7 +75,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:textColor="@color/black"
-                    android:textSize="33px"
+                    android:textSize="11sp"
                     android:inputType="phone"
                     android:digits="1234567890"
                     android:hint="请输入手机号"/>
@@ -84,7 +84,7 @@
                     android:layout_width="153px"
                     android:layout_height="45px"
                     android:textColor="@color/white"
-                    android:textSize="23px"
+                    android:textSize="8sp"
                     android:background="#f96565"
                     android:gravity="center"
                     android:text="获取验证码"
@@ -102,7 +102,7 @@
                 android:digits="1234567890"
                 android:background="@drawable/shape_white_black_stroke_rect"
                 android:gravity="center_vertical"
-                android:textSize="33px"
+                android:textSize="11sp"
                 android:textColor="@color/black"
                 android:hint="请输入验证码"/>
             <EditText
@@ -114,7 +114,7 @@
                 android:paddingRight="50px"
                 android:background="@drawable/shape_white_black_stroke_rect"
                 android:gravity="center_vertical"
-                android:textSize="33px"
+                android:textSize="11sp"
                 android:inputType="textPassword"
                 android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ_"
                 android:textColor="@color/black"
@@ -130,7 +130,7 @@
                 android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ_"
                 android:background="@drawable/shape_white_black_stroke_rect"
                 android:gravity="center_vertical"
-                android:textSize="33px"
+                android:textSize="11sp"
                 android:textColor="@color/black"
                 android:hint="请确认密码"/>
             <EditText
@@ -142,7 +142,7 @@
                 android:paddingRight="50px"
                 android:background="@drawable/shape_white_black_stroke_rect"
                 android:gravity="center_vertical"
-                android:textSize="33px"
+                android:textSize="11sp"
                 android:textColor="@color/black"
                 android:hint="请输入用户昵称"/>
             <TextView
@@ -151,7 +151,7 @@
                 android:layout_height="81px"
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:textSize="47px"
+                android:textSize="16sp"
                 android:layout_marginTop="54px"
                 android:background="#3fbfcc"
                 android:text="快速注册"
@@ -171,7 +171,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="33px"
+                    android:textSize="11sp"
                     android:textColor="#bababa"
                     android:text="其他登录方式"
                     android:layout_marginLeft="33px"
