--- a/tenghen/src/main/res/layout/activity_search.xml
+++ b/tenghen/src/main/res/layout/activity_search.xml
@@ -20,7 +20,7 @@
             android:drawableLeft="@drawable/ic_search"
             android:gravity="center_vertical"
             android:drawablePadding="15px"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:textColor="#565656"
             android:imeOptions="actionSearch"
             android:inputType="text"
@@ -29,8 +29,10 @@
             android:id="@+id/cancelBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:text="取消"
             android:layout_marginLeft="42px"/>
         
