--- a/tenghen/src/main/res/layout/activity_setting.xml
+++ b/tenghen/src/main/res/layout/activity_setting.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40px"
+            android:textSize="14sp"
             android:textColor="@color/black"
             android:layout_centerVertical="true"
             android:text="第三方帐号管理"/>
@@ -40,7 +40,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40px"
+            android:textSize="14sp"
             android:textColor="@color/black"
             android:layout_centerVertical="true"
             android:text="清除缓存"/>
@@ -63,7 +63,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40px"
+            android:textSize="14sp"
             android:textColor="@color/black"
             android:layout_centerVertical="true"
             android:text="检查更新"/>
@@ -86,7 +86,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40px"
+            android:textSize="14sp"
             android:textColor="@color/black"
             android:layout_centerVertical="true"
             android:text="退出登录"/>
