--- a/tenghen/src/main/res/layout/fragment_stacks.xml
+++ b/tenghen/src/main/res/layout/fragment_stacks.xml
@@ -34,7 +34,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16px"
-                    android:textSize="40px"
+                    android:textSize="13sp"
                     android:textColor="@color/colorGray"
                     android:text="排行榜"/>
 
@@ -57,7 +57,7 @@
                         android:gravity="center"
                         android:layout_weight="1"
                         android:textColor="@color/colorGray"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:text="点击榜"
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_click"/>
@@ -68,7 +68,7 @@
                         android:gravity="center"
                         android:layout_weight="1"
                         android:textColor="@color/colorGray"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:text="订阅榜"
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_sub"/>
@@ -79,7 +79,7 @@
                         android:gravity="center"
                         android:layout_weight="1"
                         android:textColor="@color/colorGray"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:text="收藏榜"
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_col"/>
@@ -90,7 +90,7 @@
                         android:gravity="center"
                         android:layout_weight="1"
                         android:textColor="@color/colorGray"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:text="推荐榜"
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_rec"/>
@@ -108,7 +108,7 @@
                         android:gravity="center"
                         android:layout_weight="1"
                         android:textColor="@color/colorGray"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:text="新书榜"
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_new"/>
@@ -119,7 +119,7 @@
                         android:gravity="center"
                         android:layout_weight="1"
                         android:textColor="@color/colorGray"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:text="完本榜"
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_com"/>
@@ -130,7 +130,7 @@
                         android:gravity="center"
                         android:layout_weight="1"
                         android:textColor="@color/colorGray"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:text="更新榜"
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_update"/>
@@ -141,7 +141,7 @@
                         android:gravity="center"
                         android:layout_weight="1"
                         android:textColor="@color/colorGray"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:text="打赏榜"
                         android:drawablePadding="9dp"
                         android:drawableTop="@drawable/btn_rank_reward"/>
@@ -166,7 +166,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16px"
-                    android:textSize="40px"
+                    android:textSize="13sp"
                     android:textColor="@color/colorGray"
                     android:text="题材分类"/>
 
@@ -199,7 +199,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:textColor="@color/colorGray"
                         android:text="现代言情"
                         android:paddingLeft="48px"
@@ -215,7 +215,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:textColor="@color/colorGray"
                         android:text="古代言情"
                         android:paddingLeft="48px"
@@ -250,7 +250,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:textColor="@color/colorGray"
                         android:text="幻想言情"
                         android:paddingLeft="48px"
@@ -266,7 +266,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:textColor="@color/colorGray"
                         android:text="青春校园"
                         android:paddingLeft="48px"
@@ -301,7 +301,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:textColor="@color/colorGray"
                         android:text="玄幻奇幻"
                         android:paddingLeft="48px"
@@ -317,7 +317,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:textSize="37px"
+                        android:textSize="12sp"
                         android:textColor="@color/colorGray"
                         android:text="现代都市"
                         android:paddingLeft="48px"
