--- a/tenghen/src/main/res/layout/item_book.xml
+++ b/tenghen/src/main/res/layout/item_book.xml
@@ -20,7 +20,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24px"
         android:maxLines="1"
-        android:textSize="36px"
+        android:textSize="12sp"
         android:textColor="@color/colorLightGray"
         android:text="妖妃风华"/>
 
