--- a/tenghen/src/main/res/layout/item_book_detail_gift_log.xml
+++ b/tenghen/src/main/res/layout/item_book_detail_gift_log.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#969696"
-        android:textSize="30px"
+        android:textSize="10sp"
         android:text="喵喵"
         />
     <View
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#969696"
-        android:textSize="33px"
+        android:textSize="11sp"
         android:text=" 1 枚"/>
 
 
