--- a/tenghen/src/main/res/layout/item_book_detail_gift_log_label.xml
+++ b/tenghen/src/main/res/layout/item_book_detail_gift_log_label.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56px"
-        android:textSize="42px"
+        android:textSize="14sp"
         android:textColor="#575757"
         android:text="最新捧场"
         />
