--- a/tenghen/src/main/res/layout/item_book_detail_more.xml
+++ b/tenghen/src/main/res/layout/item_book_detail_more.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right|center_vertical"
         android:textColor="#ec6b8a"
-        android:textSize="30px"
+        android:textSize="10sp"
         android:text="查看更多  >"
         />
 
