--- a/tenghen/src/main/res/layout/item_book_rank.xml
+++ b/tenghen/src/main/res/layout/item_book_rank.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:textSize="42px"
+                android:textSize="14sp"
                 android:textColor="@color/colorGray"
                 android:layout_marginTop="24px"
                 android:text="1.地下迷情之强宠娇妻"
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="2"
                 android:ellipsize="end"
-                android:textSize="30px"
+                android:textSize="10sp"
                 android:textColor="#bfbfc0"
                 android:layout_marginTop="30px"
                 android:text="为了十万块，她将自己的清白之身，献给他。"/>
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:maxLines="2"
                 android:ellipsize="end"
-                android:textSize="30px"
+                android:textSize="10sp"
                 android:textColor="#bfbfc0"
                 android:layout_marginTop="27px"
                 android:text="作者：静舞红尘"/>
@@ -66,7 +66,7 @@
                     android:id="@+id/categoryNameTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="30px"
+                    android:textSize="10sp"
                     android:textColor="#f77486"
                     android:paddingLeft="8px"
                     android:paddingRight="8px"
@@ -78,7 +78,7 @@
                     android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="30px"
+                    android:textSize="10sp"
                     android:textColor="#66d4d0"
                     android:paddingLeft="8px"
                     android:paddingRight="8px"
