--- a/tenghen/src/main/res/layout/item_cost_log.xml
+++ b/tenghen/src/main/res/layout/item_cost_log.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:textColor="#373737"
-                android:textSize="31px"
+                android:textSize="10sp"
                 android:text="妖妃风华"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,11 +40,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#373737"
-                    android:textSize="26px"
+                    android:textSize="9sp"
                     android:text="订阅第一章：青春飞扬时光"/>
                 <View
                     android:layout_width="1px"
-                    android:layout_height="26px"
+                    android:layout_height="9sp"
                     android:layout_marginLeft="30px"
                     android:layout_marginRight="30px"
                     android:background="#373737"/>
@@ -52,7 +52,7 @@
                     android:id="@+id/readBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="26px"
+                    android:textSize="9sp"
                     android:textColor="#fa6666"
                     android:text="重读"/>
             </LinearLayout>
@@ -60,7 +60,7 @@
                 android:id="@+id/costTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="26px"
+                android:textSize="9sp"
                 android:textColor="#373737"
                 android:layout_marginTop="27px"
                 android:text="于2015-03-19 17:13 花费 10 腾币"/>
