--- a/tenghen/src/main/res/layout/item_dynamic_comment.xml
+++ b/tenghen/src/main/res/layout/item_dynamic_comment.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#f96466"
-                android:textSize="32px"
+                android:textSize="11sp"
                 android:text="我就是不一样的烟火"/>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -39,12 +39,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#373737"
-                    android:textSize="24px"
+                    android:textSize="8sp"
                     android:text="评论了" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="24px"
+                    android:textSize="8sp"
                     android:textColor="#f74082"
                     android:layout_marginLeft="36px"
                     android:text="《缉拿千亿未婚妻》"/>
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#838383"
-                android:textSize="24px"
+                android:textSize="8sp"
                 android:layout_marginTop="30px"
                 android:text="说起赵一涵和天佑，两人的关系也是有点不一般，据说自从认识以后，天佑就和赵一涵频频互动，直播期间也经常一起喊麦，每次连麦网友都说两人的气氛有点小微妙啊，看天佑笑得多开心呀！"/>
             <LinearLayout
@@ -65,13 +65,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#adadad"
-                    android:textSize="20px"
+                    android:textSize="7sp"
                     android:text="2017-05-08 12:53"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#adadad"
-                    android:textSize="20px"
+                    android:textSize="7sp"
                     android:layout_marginLeft="48px"
                     android:text="回复 10"/>
             </LinearLayout>
