--- a/tenghen/src/main/res/layout/item_label.xml
+++ b/tenghen/src/main/res/layout/item_label.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16px"
-        android:textSize="40px"
+        android:textSize="13sp"
         android:textColor="@color/colorGray"
         android:text="主编推荐"/>
 
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="30px"
+            android:textSize="10sp"
             android:paddingLeft="9px"
             android:paddingRight="9px"
             android:paddingTop="15px"
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="30px"
+            android:textSize="10sp"
             android:paddingLeft="9px"
             android:paddingRight="9px"
             android:paddingTop="15px"
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="30px"
+            android:textSize="10sp"
             android:paddingLeft="9px"
             android:paddingRight="9px"
             android:paddingTop="15px"
