--- a/tenghen/src/main/res/layout/item_latest_read.xml
+++ b/tenghen/src/main/res/layout/item_latest_read.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:singleLine="true"
             android:text="老公亲亲就过敏"/>
         <TextView
@@ -33,14 +33,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#808080"
-            android:textSize="33px"
+            android:textSize="11sp"
             android:text="都包谷"
             android:layout_marginTop="27px"/>
         <TextView
             android:id="@+id/readTimeTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="33px"
+            android:textSize="11sp"
             android:textColor="#808080"
             android:layout_marginTop="27px"
             android:text="2017-02-25"
