--- a/tenghen/src/main/res/layout/item_my_msg.xml
+++ b/tenghen/src/main/res/layout/item_my_msg.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:textSize="30px"
+            android:textSize="10sp"
             android:textColor="#373737"
             android:layout_marginLeft="51px"
             android:layout_marginRight="51px"
@@ -29,13 +29,13 @@
             android:layout_marginLeft="51px"
             android:layout_marginRight="51px"
             android:textColor="#838383"
-            android:textSize="18px"
+            android:textSize="6sp"
             android:text="2017-03-10 11:00"
             android:layout_marginTop="30px" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24px"
+            android:textSize="8sp"
             android:textColor="#838383"
             android:layout_marginLeft="51px"
             android:layout_marginRight="51px"
@@ -50,7 +50,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="28px"
+            android:textSize="9sp"
             android:textColor="#373737"
             android:text="立即查看 >"
             android:layout_marginLeft="51px"
