--- a/tenghen/src/main/res/layout/item_rank_active.xml
+++ b/tenghen/src/main/res/layout/item_rank_active.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#373737"
-            android:textSize="36px"
+            android:textSize="12sp"
             android:singleLine="true"
             android:ellipsize="end"
             android:text="重生之调教渣夫"
