--- a/tenghen/src/main/res/layout/item_rank_active_header.xml
+++ b/tenghen/src/main/res/layout/item_rank_active_header.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#373737"
-            android:textSize="42px"
+            android:textSize="14sp"
             android:layout_marginLeft="21px"
             android:text="活跃度排行榜"/>
     </LinearLayout>
